Try to fix menu on mobile issue

--- a/wp-content/themes/redcross/src/sass/_header.scss
+++ b/wp-content/themes/redcross/src/sass/_header.scss
@@ -203,6 +203,7 @@ h2.logo-name {
 		font-size: 13px;		
 		color: $color-white;
 		position: relative;
+		margin-right: 1px;
 				
 		a {
 			display: block;
